--- a/src/renderer/index.scss
+++ b/src/renderer/index.scss
@@ -1,7 +1,9 @@
-@use '@carbon/react' with ($font-path: '@ibm/plex');
-@use '@carbon/styles/scss/theme';
-@use '@carbon/styles/scss/themes';
+@use "@carbon/react" with (
+  $font-path: "@ibm/plex"
+);
+@use "@carbon/styles/scss/theme";
+@use "@carbon/styles/scss/themes";
 
 :root[data-carbon-theme="g90"] {
-    @include theme.theme(themes.$g90);
+  @include theme.theme(themes.$g90);
 }
