style: Fix `GamePage.scss` formatter violation

--- a/src/renderer/ui/routes/games/game/GamePage.scss
+++ b/src/renderer/ui/routes/games/game/GamePage.scss
@@ -27,7 +27,7 @@
   margin-bottom: $spacing-05;
 }
 .games-game-view__content-prop-list i {
-  font-style: italic
+  font-style: italic;
 }
 
 .games-game-view__content h2 {
