feat: Display existing game versions for a game

--- a/src/renderer/ui/routes/games/game/GamePage.scss
+++ b/src/renderer/ui/routes/games/game/GamePage.scss
@@ -22,6 +22,9 @@
 .games-game-view__content-listing {
   padding-bottom: $spacing-05;
 }
+.games-game-view__content-versions {
+  padding-bottom: $spacing-05;
+}
 
 .games-game-view__content-prop-list {
   margin-bottom: $spacing-05;
