refactor: Use StructuredList vor GameVersionList
Might not be the final version, but it's a start. Consider switching to
DataTable.

--- a/src/renderer/ui/routes/games/game/GamePage.scss
+++ b/src/renderer/ui/routes/games/game/GamePage.scss
@@ -39,5 +39,7 @@
 }
 .games-game-view__content h3 {
   @include type-style("heading-02");
-  padding-bottom: $spacing-04;
+}
+.games-game-view__content h4 {
+  @include type-style("heading-01");
 }
