--- a/src/renderer/index.scss
+++ b/src/renderer/index.scss
@@ -1,3 +1,9 @@
+@use "@carbon/react/scss/feature-flags" with (
+  $feature-flags: (
+    "enable-v12-tile-radio-icons": true,
+    "enable-v12-structured-list-visible-icons": true,
+  )
+);
 @use "@carbon/react" with (
   $font-path: "@ibm/plex"
 );
