--- a/src/renderer/index.scss
+++ b/src/renderer/index.scss
@@ -5,7 +5,8 @@
   )
 );
 @use "@carbon/react" with (
-  $font-path: "@ibm/plex"
+  $font-path: "@ibm/plex",
+  $use-per-family-plex: true
 );
 @use "@carbon/themes/scss/themes" as *;
 @use "@carbon/themes";
